crates/peach_repo/src/provider/snapshots/peach_repo__provider__openai__tests__detailed_error_message_included.snap
---
source: crates/peach_repo/src/provider/openai.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "401 GET http://127.0.0.1:<port>/models",
        source: "{\"error\":{\"code\":401,\"message\":\"Authentication failed: API key is invalid or expired. Please check your API key.\"}}",
    },
}
