crates/peach_repo/src/provider/snapshots/peach_repo__provider__openai__tests__fetch_models_server_error.snap
---
source: crates/peach_repo/src/provider/openai.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "500 GET http://127.0.0.1:<port>/models",
        source: "{\"error\":{\"code\":500,\"message\":\"Internal Server Error\"}}",
    },
}
